<resources>
    <string name="app_name">Car Finder</string>
    <string name="txtLatitud">Latitud:</string>
    <string name="txtLongitud">Longitud:</string>
    <string name="btnButonInciar">Inciar Tracking</string>
    <string name="btnButonDetener">Detener Tracking</string>
    <string name="btnInicioSesion">Iniciar Sesión</string>
    <string name="txtIdConductor">Código Conductor</string>
    <string name="txtPassWord">Contraseña</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="logo_description">Logo</string>
    <string name="logut">Cerrar Sesion</string>


</resources>