<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".Login">

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="384dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="204dp"
        android:backgroundTint="@color/azulMedio"
        android:fontFamily="@font/robotomedium"
        android:hint="@string/hint_username"
        android:minHeight="48dp"
        android:textColor="@color/azulCielo"
        android:textColorHint="@color/azulCielo" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="382dp"
        android:layout_height="82dp"
        android:layout_below="@id/txtUsername"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/azulMedio"
        android:fontFamily="@font/robotomedium"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/azulCielo"
        android:textColorHint="@color/azulCielo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="177dp"
        android:layout_height="69dp"
        android:layout_below="@id/txtPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="101dp"
        android:backgroundTint="@color/azulCielo"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/azulCielo"
        android:textColorLink="@color/azulCielo" />

    <EditText
        android:id="@+id/editTextText"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="225dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="88dp"
        android:ems="10"
        android:fontFamily="@font/robotoblack"
        android:inputType="text"
        android:text="CarFinder"
        android:textColor="#3D5AFE"
        android:textSize="34sp"
        android:textStyle="bold" />

</RelativeLayout>